testdata/baselines/reference/compiler/templateLiteralExponentialBlowup.errors.txt
templateLiteralExponentialBlowup.ts(14,11): error TS2589: Type instantiation is excessively deep and possibly infinite.


==== templateLiteralExponentialBlowup.ts (1 errors) ====
    // Repro from https://github.com/microsoft/TypeScript/issues/63271
    // Template literal types that double in size each recursion step should not
    // consume unbounded memory.
    
    type Dec<N extends number> = 
        N extends 5 ? 4 : N extends 4 ? 3 : N extends 3 ? 2 : 
        N extends 2 ? any : 
        N extends 1 ? 0 : 0;
    
    type Recur<N extends number, S extends string> = 
        N extends 0 ? S : Recur<Dec<N>, `${S}_${S}`>;
    
    type Explode = {
        [P in Recur<5, "a"> as `${P}_key`]: any;
              ~~~~~~~~~~~~~
!!! error TS2589: Type instantiation is excessively deep and possibly infinite.
    };
    